XMLtoCSV/objects/unpackaged/objects/Inventory_Order_Line_vod__c.object
<CustomObject>
    <description>As part of an Inventory Order, a line item containing specific product and ordered quantity.</description>
    <fields>
        <fullName>Exception_Comments_vod__c</fullName>
        <description>User entered comments regarding the request to be granted an exemption for ordering in excess of the allocation quantity.</description>
        <label>Exception Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Severity_vod__c</fullName>
        <description>This field controls how the error will be handled by the online application</description>
        <label>Exception Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Prevent_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warn_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Require_Approval_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Type_vod__c</fullName>
        <description>This field identifies which attribute gave rise to an exception</description>
        <label>Exception Type</label>
        <picklist>
            <picklistValues>
                <fullName>QuantityDate_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inventory_Order_Allocation_vod__c</fullName>
        <description>Row ID for Inventory Order Allocation record against which the order line is being recorded.</description>
        <label>Inventory Order Allocation</label>
        <referenceTo>Inventory_Order_Allocation_vod__c</referenceTo>
        <relationshipLabel>Inventory Order Lines</relationshipLabel>
        <relationshipName>Inventory_Order_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Order_Header_vod__c</fullName>
        <description>Row ID for Order Header record for which the order line is being created</description>
        <label>Inventory Order Header</label>
        <referenceTo>Inventory_Order_vod__c</referenceTo>
        <relationshipLabel>Inventory Order Lines</relationshipLabel>
        <relationshipName>Inventory_Order_Lines_vod</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inventory_Order_Line_Status_vod__c</fullName>
        <description>This field identifies the status of this order line. The online application managers New, Save and Submitted. The customer&apos;s integration with their fulfillment system can use the other delivered values.</description>
        <label>Inventory Order Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>New_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In_Process_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Fulfilled_Quantity_vod__c</fullName>
        <description>The quantity fulfilled from this order. The fulfilled quantity is used to decrement the available allocation.</description>
        <label>Order Fulfilled Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_UOM_vod__c</fullName>
        <description>The unit of measure for the order quantity.</description>
        <label>Order Quantity UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Quantity_vod__c</fullName>
        <description>The quantity being ordered.</description>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product being ordered on this inventory order line.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Inventory Order Lines</relationshipLabel>
        <relationshipName>Inventory_Order_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date_vod__c</fullName>
        <description>The requested date for the order line to be delivered to the Ordered For user.</description>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <label>Inventory Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IOL-{0000000}</displayFormat>
        <label>Inventory Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VEEVA_DELIVERY_DATE_CHECK</fullName>
        <active>true</active>
        <description>This rule enforces that the requested delivery date is not before the order create date.</description>
        <errorConditionFormula>Requested_Delivery_Date_vod__c &lt;  Inventory_Order_Header_vod__r.Order_Create_Date_vod__c</errorConditionFormula>
        <errorMessage>Delivery date cannot be before the order create date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VEEVA_NEGATIVE_QUANTITY</fullName>
        <active>true</active>
        <description>This validation rule enforces that the quantity ordered is not a negative number.</description>
        <errorConditionFormula>Order_Quantity_vod__c &lt; 0</errorConditionFormula>
        <errorMessage>Order quantity cannot be less than 0</errorMessage>
    </validationRules>
</CustomObject>